# tt-foil

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
cmake/: tt_metal_deps.cmake
docs/: api.md
examples/: CMakeLists.txt
examples/add_tiles/: build_kernels.sh
examples/add_tiles/kernels/: compute.cpp
examples/add_two_numbers/: CMakeLists.txt  build_kernels.sh  main.cpp
examples/add_two_numbers/kernels/: add_brisc.cpp  add_ncrisc.cpp
examples/bias_add/: build_kernels.sh
examples/bias_add/kernels/: compute.cpp  reader.cpp  writer.cpp
examples/conv_1x1/: build_kernels.sh
examples/conv_3x3/: build_kernels.sh
examples/conv_3x3/kernels/: writer.cpp
examples/conv_3x3_2core/: build_kernels.sh
examples/conv_3x3_s2/: build_kernels.sh
examples/matmul_1tile/: build_kernels.sh
examples/matmul_1tile/kernels/: compute.cpp
examples/matmul_2core/: build_kernels.sh
examples/matmul_2core/kernels/: reader.cpp
examples/matmul_2core_mcast/: build_kernels.sh
examples/matmul_2core_mcast/kernels/: reader_consumer.cpp  reader_producer.cpp
examples/matmul_2x2/: build_kernels.sh
examples/matmul_4x2/: build_kernels.sh
examples/matmul_dram/: build_kernels.sh
examples/matmul_dram/kernels/: compute.cpp
examples/matmul_kt/: build_kernels.sh
examples/matmul_kt/kernels/: compute.cpp  reader.cpp
examples/matmul_mnk/: build_kernels.sh
examples/matmul_mnk/kernels/: reader.cpp  writer.cpp
examples/noc_passthrough/: build_kernels.sh
examples/noc_passthrough/kernels/: consumer.cpp  producer.cpp
examples/noc_passthrough/prebuilt/: consumer.elf  producer.elf
examples/relu/: build_kernels.sh
examples/relu/kernels/: compute.cpp
examples/tile_copy/: build_kernels.sh
examples/tile_copy/kernels/: compute.cpp  reader.cpp
include/tt_foil/: runtime.hpp
scripts/: build_firmware.sh
src/: bank_tables_init.cpp  bank_tables_init.hpp  buffer.cpp  buffer.hpp  cb_config.cpp  cb_config.hpp  core_info_init.cpp  core_info_init.hpp  device.cpp  device.hpp  dispatch.cpp  dispatch.hpp  firmware_load.cpp  firmware_load.hpp  firmware_paths.cpp  firmware_paths.hpp  kernel.cpp  kernel.hpp  mailbox_init.cpp  mailbox_init.hpp  noc_addr.cpp  noc_addr.hpp  reset.cpp  reset.hpp  runtime_impl.cpp  umd_boot.cpp  umd_boot.hpp
src/llrt_local/: hal_stubs.cpp  tt_elffile.cpp  tt_elffile.hpp  tt_memory.cpp  tt_memory.h
tests/: CMakeLists.txt  test_add_kernel.cpp  test_add_tiles.cpp  test_bank_tables_init.cpp  test_bias_add.cpp  test_brisc_ncrisc.cpp  test_bump_alloc.cpp  test_cb_config.cpp  test_cold_boot.cpp  test_conv_1x1.cpp  test_conv_3x3.cpp  test_conv_3x3_2core.cpp  test_conv_3x3_s2.cpp  test_core_info_init.cpp  test_dram_roundtrip.cpp  test_elf_load.cpp  test_firmware_load.cpp  test_firmware_paths.cpp  test_hal_standalone.cpp  test_mailbox_init.cpp  test_matmul_1tile.cpp  test_matmul_2core.cpp  test_matmul_2core_mcast.cpp  test_matmul_2x2.cpp  test_matmul_4x2.cpp  test_matmul_dram.cpp  test_matmul_kt.cpp  test_matmul_mnk.cpp  test_multi_core_boot.cpp  test_multi_kernel.cpp  test_noc_passthrough.cpp  test_relu.cpp  test_risc_ids.cpp  test_tile_copy.cpp  test_umd_open.cpp  tile_utils.hpp
tools/: tt_foil_weaken.cpp
